--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine on
 
+hi there
+
 # if the URL contains /public
 # %1 refers to the match in the RewriteCond
 # [L] makes it the last test
